[package]
name = "pg_fraction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
pgx = "0.2.6"
pgx-macros = "0.2.6"
serde = "1.0.134"
fraction = { version = "0.9.0", features = ["with-serde-support"] }
nom = "7.1.0"

[dev-dependencies]
pgx-tests = "0.2.6"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
